syntax = "proto3";

package bancada;

// Servi√ßos
service BancadaService {
  rpc BuscarBancada(BancadaRequest) returns (BancadaResponse);
  rpc LimparTudo(Empty) returns (LimparResponse);
}

// Mensagens
message Empty {}

message BancadaRequest {
  string ip = 1;
  int32 porta = 2;
}

message BancadaResponse {
  float mediaTemperatura = 1;
  float medianaTemperatura = 2;
  float mediaUmidade = 3;
  float medianaUmidade = 4;
  float mediaCondutividade = 5;
  float medianaCondutividade = 6;
  repeated float temperaturas = 7;
  repeated float umidades = 8;
  repeated float condutividades = 9;
  int32 bancadaId = 10;
  string erro = 11; // Para mensagens de erro, se houver
}

message LimparResponse {
  string mensagem = 1;
}